interpreter/generated/MSqlParser.cpp

// Generated from ./MSqlParser.g4 by ANTLR 4.9


#include "MSqlParserListener.h"
#include "MSqlParserVisitor.h"

#include "MSqlParser.h"


using namespace antlrcpp;
using namespace antlr4;

MSqlParser::MSqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MSqlParser::~MSqlParser() {
  delete _interpreter;
}

std::string MSqlParser::getGrammarFileName() const {
  return "MSqlParser.g4";
}

const std::vector<std::string>& MSqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MSqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SqlStatementsContext ------------------------------------------------------------------

MSqlParser::SqlStatementsContext::SqlStatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MSqlParser::CreateTableContext* MSqlParser::SqlStatementsContext::createTable() {
  return getRuleContext<MSqlParser::CreateTableContext>(0);
}

MSqlParser::CreateIndexContext* MSqlParser::SqlStatementsContext::createIndex() {
  return getRuleContext<MSqlParser::CreateIndexContext>(0);
}

MSqlParser::DropTableContext* MSqlParser::SqlStatementsContext::dropTable() {
  return getRuleContext<MSqlParser::DropTableContext>(0);
}

MSqlParser::DropIndexContext* MSqlParser::SqlStatementsContext::dropIndex() {
  return getRuleContext<MSqlParser::DropIndexContext>(0);
}

MSqlParser::InsertStatementContext* MSqlParser::SqlStatementsContext::insertStatement() {
  return getRuleContext<MSqlParser::InsertStatementContext>(0);
}

MSqlParser::DeleteStatementContext* MSqlParser::SqlStatementsContext::deleteStatement() {
  return getRuleContext<MSqlParser::DeleteStatementContext>(0);
}

MSqlParser::SelectStatementContext* MSqlParser::SqlStatementsContext::selectStatement() {
  return getRuleContext<MSqlParser::SelectStatementContext>(0);
}


size_t MSqlParser::SqlStatementsContext::getRuleIndex() const {
  return MSqlParser::RuleSqlStatements;
}

void MSqlParser::SqlStatementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatements(this);
}

void MSqlParser::SqlStatementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatements(this);
}


antlrcpp::Any MSqlParser::SqlStatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitSqlStatements(this);
  else
    return visitor->visitChildren(this);
}

MSqlParser::SqlStatementsContext* MSqlParser::sqlStatements() {
  SqlStatementsContext *_localctx = _tracker.createInstance<SqlStatementsContext>(_ctx, getState());
  enterRule(_localctx, 0, MSqlParser::RuleSqlStatements);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(141);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      createTable();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(135);
      createIndex();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(136);
      dropTable();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(137);
      dropIndex();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(138);
      insertStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(139);
      deleteStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(140);
      selectStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableContext ------------------------------------------------------------------

MSqlParser::CreateTableContext::CreateTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::CreateTableContext::CREATE() {
  return getToken(MSqlParser::CREATE, 0);
}

tree::TerminalNode* MSqlParser::CreateTableContext::TABLE() {
  return getToken(MSqlParser::TABLE, 0);
}

MSqlParser::TableNameContext* MSqlParser::CreateTableContext::tableName() {
  return getRuleContext<MSqlParser::TableNameContext>(0);
}

tree::TerminalNode* MSqlParser::CreateTableContext::SEMI() {
  return getToken(MSqlParser::SEMI, 0);
}

MSqlParser::CreateDefinitionsContext* MSqlParser::CreateTableContext::createDefinitions() {
  return getRuleContext<MSqlParser::CreateDefinitionsContext>(0);
}


size_t MSqlParser::CreateTableContext::getRuleIndex() const {
  return MSqlParser::RuleCreateTable;
}

void MSqlParser::CreateTableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateTable(this);
}

void MSqlParser::CreateTableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateTable(this);
}


antlrcpp::Any MSqlParser::CreateTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitCreateTable(this);
  else
    return visitor->visitChildren(this);
}

MSqlParser::CreateTableContext* MSqlParser::createTable() {
  CreateTableContext *_localctx = _tracker.createInstance<CreateTableContext>(_ctx, getState());
  enterRule(_localctx, 2, MSqlParser::RuleCreateTable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    match(MSqlParser::CREATE);
    setState(144);
    match(MSqlParser::TABLE);
    setState(145);
    tableName();
    setState(147);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MSqlParser::LR_BRACKET) {
      setState(146);
      createDefinitions();
    }
    setState(149);
    match(MSqlParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionsContext ------------------------------------------------------------------

MSqlParser::CreateDefinitionsContext::CreateDefinitionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

std::vector<MSqlParser::CreateDefinitionContext *> MSqlParser::CreateDefinitionsContext::createDefinition() {
  return getRuleContexts<MSqlParser::CreateDefinitionContext>();
}

MSqlParser::CreateDefinitionContext* MSqlParser::CreateDefinitionsContext::createDefinition(size_t i) {
  return getRuleContext<MSqlParser::CreateDefinitionContext>(i);
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}

std::vector<tree::TerminalNode *> MSqlParser::CreateDefinitionsContext::COMMA() {
  return getTokens(MSqlParser::COMMA);
}

tree::TerminalNode* MSqlParser::CreateDefinitionsContext::COMMA(size_t i) {
  return getToken(MSqlParser::COMMA, i);
}


size_t MSqlParser::CreateDefinitionsContext::getRuleIndex() const {
  return MSqlParser::RuleCreateDefinitions;
}

void MSqlParser::CreateDefinitionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateDefinitions(this);
}

void MSqlParser::CreateDefinitionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateDefinitions(this);
}


antlrcpp::Any MSqlParser::CreateDefinitionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitCreateDefinitions(this);
  else
    return visitor->visitChildren(this);
}

MSqlParser::CreateDefinitionsContext* MSqlParser::createDefinitions() {
  CreateDefinitionsContext *_localctx = _tracker.createInstance<CreateDefinitionsContext>(_ctx, getState());
  enterRule(_localctx, 4, MSqlParser::RuleCreateDefinitions);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    match(MSqlParser::LR_BRACKET);
    setState(152);
    createDefinition();
    setState(157);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MSqlParser::COMMA) {
      setState(153);
      match(MSqlParser::COMMA);
      setState(154);
      createDefinition();
      setState(159);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(160);
    match(MSqlParser::RR_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDefinitionContext ------------------------------------------------------------------

MSqlParser::CreateDefinitionContext::CreateDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MSqlParser::CreateDefinitionContext::getRuleIndex() const {
  return MSqlParser::RuleCreateDefinition;
}

void MSqlParser::CreateDefinitionContext::copyFrom(CreateDefinitionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ColumnDeclarationContext ------------------------------------------------------------------

MSqlParser::UidContext* MSqlParser::ColumnDeclarationContext::uid() {
  return getRuleContext<MSqlParser::UidContext>(0);
}

MSqlParser::ColumnDefinitionContext* MSqlParser::ColumnDeclarationContext::columnDefinition() {
  return getRuleContext<MSqlParser::ColumnDefinitionContext>(0);
}

MSqlParser::ColumnDeclarationContext::ColumnDeclarationContext(CreateDefinitionContext *ctx) { copyFrom(ctx); }

void MSqlParser::ColumnDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColumnDeclaration(this);
}
void MSqlParser::ColumnDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColumnDeclaration(this);
}

antlrcpp::Any MSqlParser::ColumnDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitColumnDeclaration(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstraintDeclarationContext ------------------------------------------------------------------

MSqlParser::TableConstraintContext* MSqlParser::ConstraintDeclarationContext::tableConstraint() {
  return getRuleContext<MSqlParser::TableConstraintContext>(0);
}

MSqlParser::ConstraintDeclarationContext::ConstraintDeclarationContext(CreateDefinitionContext *ctx) { copyFrom(ctx); }

void MSqlParser::ConstraintDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstraintDeclaration(this);
}
void MSqlParser::ConstraintDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstraintDeclaration(this);
}

antlrcpp::Any MSqlParser::ConstraintDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitConstraintDeclaration(this);
  else
    return visitor->visitChildren(this);
}
MSqlParser::CreateDefinitionContext* MSqlParser::createDefinition() {
  CreateDefinitionContext *_localctx = _tracker.createInstance<CreateDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 6, MSqlParser::RuleCreateDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MSqlParser::ID: {
        _localctx = dynamic_cast<CreateDefinitionContext *>(_tracker.createInstance<MSqlParser::ColumnDeclarationContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(162);
        uid();
        setState(163);
        columnDefinition();
        break;
      }

      case MSqlParser::CONSTRAINT:
      case MSqlParser::PRIMARY:
      case MSqlParser::CHECK:
      case MSqlParser::UNIQUE:
      case MSqlParser::RR_BRACKET:
      case MSqlParser::COMMA: {
        _localctx = dynamic_cast<CreateDefinitionContext *>(_tracker.createInstance<MSqlParser::ConstraintDeclarationContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(165);
        tableConstraint();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnDefinitionContext ------------------------------------------------------------------

MSqlParser::ColumnDefinitionContext::ColumnDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MSqlParser::DataTypeContext* MSqlParser::ColumnDefinitionContext::dataType() {
  return getRuleContext<MSqlParser::DataTypeContext>(0);
}

std::vector<MSqlParser::ColumnConstraintContext *> MSqlParser::ColumnDefinitionContext::columnConstraint() {
  return getRuleContexts<MSqlParser::ColumnConstraintContext>();
}

MSqlParser::ColumnConstraintContext* MSqlParser::ColumnDefinitionContext::columnConstraint(size_t i) {
  return getRuleContext<MSqlParser::ColumnConstraintContext>(i);
}


size_t MSqlParser::ColumnDefinitionContext::getRuleIndex() const {
  return MSqlParser::RuleColumnDefinition;
}

void MSqlParser::ColumnDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColumnDefinition(this);
}

void MSqlParser::ColumnDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColumnDefinition(this);
}


antlrcpp::Any MSqlParser::ColumnDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitColumnDefinition(this);
  else
    return visitor->visitChildren(this);
}

MSqlParser::ColumnDefinitionContext* MSqlParser::columnDefinition() {
  ColumnDefinitionContext *_localctx = _tracker.createInstance<ColumnDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 8, MSqlParser::RuleColumnDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    dataType();
    setState(172);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MSqlParser::NOT)
      | (1ULL << MSqlParser::CONSTRAINT)
      | (1ULL << MSqlParser::PRIMARY)
      | (1ULL << MSqlParser::KEY)
      | (1ULL << MSqlParser::DEFAULT)
      | (1ULL << MSqlParser::CHECK)
      | (1ULL << MSqlParser::NULL_LITERAL)
      | (1ULL << MSqlParser::UNIQUE))) != 0) || _la == MSqlParser::NULL_SPEC_LITERAL) {
      setState(169);
      columnConstraint();
      setState(174);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataTypeContext ------------------------------------------------------------------

MSqlParser::DataTypeContext::DataTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::DataTypeContext::CHAR() {
  return getToken(MSqlParser::CHAR, 0);
}

MSqlParser::LengthOneDimensionContext* MSqlParser::DataTypeContext::lengthOneDimension() {
  return getRuleContext<MSqlParser::LengthOneDimensionContext>(0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::INT() {
  return getToken(MSqlParser::INT, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::ZEROFILL() {
  return getToken(MSqlParser::ZEROFILL, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::SIGNED() {
  return getToken(MSqlParser::SIGNED, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::UNSIGNED() {
  return getToken(MSqlParser::UNSIGNED, 0);
}

tree::TerminalNode* MSqlParser::DataTypeContext::FLOAT() {
  return getToken(MSqlParser::FLOAT, 0);
}

MSqlParser::LengthTwoOptionalDimensionContext* MSqlParser::DataTypeContext::lengthTwoOptionalDimension() {
  return getRuleContext<MSqlParser::LengthTwoOptionalDimensionContext>(0);
}


size_t MSqlParser::DataTypeContext::getRuleIndex() const {
  return MSqlParser::RuleDataType;
}

void MSqlParser::DataTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDataType(this);
}

void MSqlParser::DataTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MSqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDataType(this);
}


antlrcpp::Any MSqlParser::DataTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MSqlParserVisitor*>(visitor))
    return parserVisitor->visitDataType(this);
  else
    return visitor->visitChildren(this);
}

MSqlParser::DataTypeContext* MSqlParser::dataType() {
  DataTypeContext *_localctx = _tracker.createInstance<DataTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, MSqlParser::RuleDataType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(199);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MSqlParser::CHAR: {
        enterOuterAlt(_localctx, 1);
        setState(175);
        match(MSqlParser::CHAR);
        setState(177);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(176);
          lengthOneDimension();
        }
        break;
      }

      case MSqlParser::INT: {
        enterOuterAlt(_localctx, 2);
        setState(179);
        match(MSqlParser::INT);
        setState(181);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(180);
          lengthOneDimension();
        }
        setState(184);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::SIGNED

        || _la == MSqlParser::UNSIGNED) {
          setState(183);
          _la = _input->LA(1);
          if (!(_la == MSqlParser::SIGNED

          || _la == MSqlParser::UNSIGNED)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(187);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::ZEROFILL) {
          setState(186);
          match(MSqlParser::ZEROFILL);
        }
        break;
      }

      case MSqlParser::FLOAT: {
        enterOuterAlt(_localctx, 3);
        setState(189);
        match(MSqlParser::FLOAT);
        setState(191);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::LR_BRACKET) {
          setState(190);
          lengthTwoOptionalDimension();
        }
        setState(194);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::SIGNED

        || _la == MSqlParser::UNSIGNED) {
          setState(193);
          _la = _input->LA(1);
          if (!(_la == MSqlParser::SIGNED

          || _la == MSqlParser::UNSIGNED)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(197);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MSqlParser::ZEROFILL) {
          setState(196);
          match(MSqlParser::ZEROFILL);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthOneDimensionContext ------------------------------------------------------------------

MSqlParser::LengthOneDimensionContext::LengthOneDimensionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MSqlParser::LengthOneDimensionContext::LR_BRACKET() {
  return getToken(MSqlParser::LR_BRACKET, 0);
}

MSqlParser::DecimalLiteralContext* MSqlParser::LengthOneDimensionContext::decimalLiteral() {
  return getRuleContext<MSqlParser::DecimalLiteralContext>(0);
}

tree::TerminalNode* MSqlParser::LengthOneDimensionContext::RR_BRACKET() {
  return getToken(MSqlParser::RR_BRACKET, 0);
}


